Adds authentication activity, fragment, controller and services
Added rough implementation of an authentication activity. The fragment
displays a basic ui containing two text fields and a submit button to
the user. The user can then insert his credentials and hit the submit
button to start the authentication process.
The result of the authentication process is not yet evaluated.

--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
 	<string name="app_name">InfOhm</string>
 
+	<string name="fragment_authentication_username_hint">Benutzername</string>
+	<string name="fragment_authentication_username_password">Passwort</string>
+	<string name="fragment_authentication_submit">WEITER</string>
+
 </resources>
