Adds search fragment and resources
If an layout includes this fragment it will cause the toolbar to display
a search menu.

--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 	<string name="fragment_authentication_username_password">Passwort</string>
 	<string name="fragment_authentication_submit">WEITER</string>
 
+	<string name="menu_fragment_search_title">Suchen</string>
+
 </resources>
