Adds sliding tab classes, resources and styles

--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
 	<string name="fragment_authentication_username_password">Passwort</string>
 	<string name="fragment_authentication_submit">WEITER</string>
 
+	<string name="fragment_star_publisher_submit">WEITER</string>
+
 	<string name="menu_fragment_search_title">Suchen</string>
 
 </resources>
