--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
 
 	<string name="fragment_star_publisher_submit">WEITER</string>
 
+	<string name="fragment_navigation_drawer_newsfeed">Neuigkeiten</string>
+
 	<string name="menu_fragment_search_title">Suchen</string>
 
 </resources>
