--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 	<string name="activity_welcome_submit">WEITER</string>
 
 	<string name="activity_feedback_label">Feedback</string>
+	<string name="activity_feedback_submit">Vielen Dank für dein Feedback</string>
 
 	<string name="fragment_authentication_username_hint">Benutzername</string>
 	<string name="fragment_authentication_username_invalid">Dieser Benutzername ist ungültig.</string>
@@ -19,7 +20,10 @@
 	<string name="fragment_authentication_password_invalid">Dieses Password ist ungültig.</string>
 	<string name="fragment_authentication_submit">ANMELDEN</string>
 
+	<string name="fragment_feedback_subject_default">&lt;kein Betreff angegeben&gt;</string>
+	<string name="fragment_feedback_subject_hint">Betreff deiner Nachricht</string>
 	<string name="fragment_feedback_message_hint">Was möchtest du uns mitteilen?</string>
+	<string name="fragment_feedback_message_invalid">Bitte gib zuerst eine Nachricht ein.</string>
 	<string name="fragment_feedback_menu_submit">Abschicken</string>
 
 	<string name="fragment_navigation_drawer_newsfeed">Neuigkeiten</string>
