Adds no content view to daily meals fragment
Also improved "no content views" layout for:
 - Events fragment
 - Search fragment

--- a/infohm/src/main/res/values/strings.xml
+++ b/infohm/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 	<string name="fragment_daily_meals_headline_upcoming">Menüs am D</string>
 	<string name="fragment_daily_meals_date">am %3$s.%2$s.%1$s</string>
 	<string name="fragment_daily_meals_more">alle Tage</string>
+	<string name="fragment_daily_meals_no_content">in den kommenden Tagen ist kein Speiseplan verfügbar</string>
 
 	<string name="fragment_navigation_newsfeed">Neuigkeiten</string>
 	<string name="fragment_navigation_cafeteria">Speisepläne</string>
